# blockchain-poc-go-rust

./: README.md
gochain_poc/: go.mod  main.go
gochain_poc/goc_client/: client.go
gochain_poc/goc_core/: block.go  chain.go  data.go
gochain_poc/goc_crypto/: signature.go
gochain_poc/goc_server/: server.go  utils.go
gochain_poc/goc_util/: util.go
rschain_poc/: Cargo.toml
rschain_poc/src/: main.rs
rschain_poc/src/rsc_bank/: mod.rs
rschain_poc/src/rsc_blockdata/: block_data.rs  mod.rs
rschain_poc/src/rsc_core/: block.rs  chain.rs  chain_iter.rs  mod.rs  shard.rs
rschain_poc/src/rsc_crypto/: signature.rs
rschain_poc/src/rsc_miner/: mod.rs
rschain_poc/src/rsc_util/: error.rs  hash.rs  mod.rs
rschain_poc/src/rsccore/: block.rs  block_data.rs  chain.rs  hash.rs  mod.rs  signature.rs
