[package]
name = "rschain_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.2"
hex-literal = "0.3.4"
hex_fmt = "0.3.0"
serde_json = "1.0"
openssl = "0.10.28"
hex = "0.4.3"
substring = "1.4.5"
rand = "0.6.3"
thiserror = "1.0"
anyhow = "1.0"
